
Bug fixes:
* extract_rotation() now returns the correct values for yaw, pitch and roll in the z axis up coordinate system (Jamie Bayne).
* The quiet parameter is now correctly handled by Observer1D and Observer2D.
* Fixed Ray.extinction_min_depth bug that prevented the attribute being set to 1.


Release 0.8.0 (26 May 2022)
---------------------------

API changes:
* Intersection object is now passed to evaluate_surface, user code will need to be updated to include the additional parameter.

Bug fixes:
* Spectrum samples attribute is now readonly to prevent users replacing the array and potentially causing a segfault.

New:
* Added pyproject.toml (Jack Lovell)
* Mesh returns a specialised MeshIntersection object that exposes the triangle and barycentric coordinates of the intersection.


Release 0.7.1 (6 Nov 2021)
--------------------------

Bug fixes:
* MulticoreEngine fixes for MacOS and python 3.8+
* The spectral pipeline 'display_progress' attribute was not accessible from python.
* The pipeline line 'name' attribute was not accessible from python.
* Fixed half-pixel offset in multiple cameras due to an index offset error.
* Improved normalisation in quaternion_to().

New:
* Added cython factory functions for quaternions.
* Tetrahedral mesh interpolation function.
* 1D, 2D and 3D array interpolation functions.
* 1D, 2D and 3D blend functions.


Release 0.7.0 (7 Nov 2020)
--------------------------

Bug fixes:
* Fixed the last integration segment not contributing to the integral in NumericalIntegrator.
* Incorrect construction of lens primitives when lens long barrels are requested.

API Changes:
* The core.math.function package has been redesigned to introduce functions with different return types. The existing FunctionXD classes now live under core.math.function.float.

New:
* Added core.math.function.vector3d.FunctionXD objects which return Vector3D objects.
* Added Quaternions and associated transform utility functions.