@@ -381,10 +381,11 @@ cdef class RGBPipeline2D(Pipeline2D):
         fig = self._display_figure
 
         # set window title
-        if status:
-            fig.canvas.set_window_title("{} - {}".format(self.name, status))
-        else:
-            fig.canvas.set_window_title(self.name)
+        if fig.canvas.manager is not None:
+            if status:
+                fig.canvas.manager.set_window_title("{} - {}".format(self.name, status))
+            else:
+                fig.canvas.manager.set_window_title(self.name)
 
         # populate figure
         fig.clf()
