@@ -12,6 +12,7 @@ Bug fixes:
 * extract_rotation() now returns the correct values for yaw, pitch and roll in the z axis up coordinate system (Jamie Bayne).
 * The quiet parameter is now correctly handled by Observer1D and Observer2D.
 * Fixed Ray.extinction_min_depth bug that prevented the attribute being set to 1.
+* Fixed pipeline figure title rendering due to matplotlib canvas.set_window_title() deprecation.
 
 
 Release 0.8.0 (26 May 2022)
